deploy/k8s/base/mailpit.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit
spec:
  ports:
    - name: smtp
      port: 1025
      targetPort: smtp
    - name: http
      port: 8025
      targetPort: http
  selector:
    app.kubernetes.io/name: mailpit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailpit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailpit
    spec:
      serviceAccountName: faan-avsec
      containers:
        - name: mailpit
          image: axllent/mailpit:v1.25.0
          ports:
            - name: smtp
              containerPort: 1025
            - name: http
              containerPort: 8025
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
